# SudokuAPI

./: .dockerignore  .env  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.envs/: .env
.envs/.local/: .django  .postgres  .redis
.envs/.production/: .django  .postgres  .redis
app/: manage.py
app/app/: asgi.py  celery.py  settings.py  urls.py
app/authentication/: urls.py  views.py
app/core/: admin.py  apps.py  base.py  choices.py  models.py
app/core/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_remove_user_groups_remove_user_user_permissions_and_more.py  0002_sudoku.py  0003_alter_sudoku_difficulty.py  0003_alter_user_options_sudoku_created_at_and_more.py
app/core/tests/: test_admin.py  test_models.py
app/game_record/: admin.py  apps.py  choices.py  models.py  serializers.py  urls.py  views.py
app/game_record/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
app/sudoku/: admin.py  apps.py  base.py  choices.py  config.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
app/sudoku/detection/: digits_classifier_model.onnx  digits_recognition.py  utils.py
app/sudoku/migrations/: 0001_initial.py  0002_initial.py  0003_alter_sudoku_difficulty_alter_sudoku_status.py  0003_alter_sudoku_user.py
app/sudoku/tests/: test_sudoku_api.py
app/user/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
app/user/migrations/: 0001_initial.py
app/user/tests/: test_user_api.py
compose/local/: Dockerfile  entrypoint.sh
compose/local/celery/: beat-entrypoint.sh  (+1 more)
compose/production/: Dockerfile  entrypoint.sh
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/: Dockerfile  beat-entrypoint.sh  server-entrypoint.sh
sudokusolver/app/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_models.py  test_sudoku_api.py  test_user_api.py
tests/authentication/: test_urls.py
tests/core/: test_admin.py  test_models.py  test_sudoku_model.py  test_user_model.py
tests/sudoku/: test_models.py  test_serializers.py  test_urls.py  test_views.py  test_views_private.py  test_views_public.py  urls.py
tests/user/: test_views_private.py  test_views_public.py
(+8 files in other folders)
