[tool.poetry]
name = "sudokusolver"
version = "0.1.0"
description = ""
authors = ["raphaellndr <raph.landure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "5.1.6"
djangorestframework = "3.15.2"
drf-spectacular = "0.28.0"
django-cors-headers = "4.7.0"
djangorestframework-simplejwt = "5.4.0"
django-environ = "0.12.0"
django-allauth = "65.4.1"
dj-rest-auth = "7.0.1"
cryptography = "44.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.2"
factory-boy = "^3.3.3"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
